syntax = "proto3";

// Transmits values from the Teensy to the ESP32
message I2CSlaveProvide {
    // Processed light sensor values
    float lineAngle = 1;
    float lineSize = 2;
    bool onLine = 3;
    bool lineOver = 4;
    float lastAngle = 5;

    // Raw LRF values
    int32 frontLRF = 6;
    int32 rightLRF = 7;
    int32 backLRF = 8;
    int32 leftLRF = 9;

    // In case we need to use the MPU9250 mounted to the Teensy
    float heading = 10;
}

// Transmits values from the ESP32 to the Teensy
message I2CMasterProvide {
    // IMU
    float heading = 1;
}